content/v1.3.15/en/api/mission-ext/Program.md
---
title: "Program"
---
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `Program`
- [← Area / Back to mission-ext](./)
- [↑ API Index](../)
- [🏠 Home v1.3.15](../../)
- [⭐ SDK Overview](../../architecture/sdk-overview)
<!-- END BREADCRUMB -->
# Program

**Namespace:** TaleWorlds.MountAndBlade.GauntletUI.CodeGenerator
**Module:** TaleWorlds.MountAndBlade
**Type:** `internal class Program`
**Base:** none
**File:** `TaleWorlds.MountAndBlade.GauntletUI.CodeGenerator/Program.cs`

## Overview

`Program` lives in `TaleWorlds.MountAndBlade.GauntletUI.CodeGenerator` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.MountAndBlade.GauntletUI.CodeGenerator` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Usage Example

```csharp
var value = new Program();
```

## See Also

- [Complete Class Catalog](../catalog)